# cxlsim2

./: LICENSE  README.md
cxlsim/: CMakeLists.txt  sc_main.cpp
cxlsim/components/: Top.h  configurations.cpp  configurations.h  dram.h  host.cpp  host.h  port.h  wrapper.h
cxlsim/configs/: memory.json  system.json
cxlsim/trace/: r0.txt  r1.txt
cxlsim/utilities/: mm.h  packet_buffer.h  shmem_communicator.cpp  shmem_communicator.h  sim_packet.h  statistics.cpp  statistics.h  sync_object.h
etc/: Bridge.cpp  Bridge.h  CMakeLists.txt  CMakeLists2.txt  DDR5_3200C.yaml  generic_dram_controller.cpp  request.cpp  request.h
host/cpp/: Makefile  main.cpp  my_program  packetManager.cpp  traceGenerator.cpp  traceGenerator.h  traceManager.cpp  traceManager.h
hsim/: CMakeLists.txt
hsim/components/: configurations.cpp  configurations.h  dram.cpp  host.h  interconnector.cpp  interconnector.h  port.cpp  wrapper.cpp
hsim/configs/: memory.json
hsim/libs/jsoncpp/: libjsoncpp.so.1.9.4
hsim/libs/spdlog/: libspdlog.so.1.7.0
hsim/utilities/: hsim_packet.h  mm.cpp  packet_buffer.cpp  packet_buffer.h  shmem_communicator.h  statistics.cpp  statistics.h  sync_object.h
libs/systemc-3.0.0/include/sysc/kernel/: sc_module.h
libs/systemc-3.0.0/include/tlm_core/tlm_2/tlm_generic_payload/: tlm_gp.h
libs/systemc-3.0.0/lib-linux64/: libsystemc.la
libs/systemc-3.0.0/lib-linux64/pkgconfig/: systemc.pc  tlm.pc
